--- a/index.html
+++ b/index.html
@@ -5,15 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Madhu | IsYourBirthdayLucky</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Is Your Birthday Lucky?</h1>
-    <label for="birth-date">Birth Date:</label>
-    <input type="date" id="birth-date">
-    <label for="lucky-number">Lucky Number:</label>
-    <input type="number" id="lucky-number">
-    <button id="check">Check</button>
-    <p id="output"></p>
+
+    <div class="header">Is Your Birthday Lucky?</div>
+    
+    <main class="container">
+        <label for="birth-date">Birth Date:</label>
+        <input type="date" id="birth-date">
+        <label for="lucky-number">Lucky Number:</label>
+        <input type="number" id="lucky-number">
+        <button id="check">Check</button>
+        <p id="output"></p>
+    </main>
+
     <script src="main.js"></script>
 </body>
 </html>
