--- a/index.html
+++ b/index.html
@@ -8,17 +8,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-    <div class="header">Is Your Birthday Lucky?</div>
-    
-    <main class="container">
+    <h1>Is Your Birthday Lucky?</h1>
+    <div class="container">
         <label for="birth-date">Birth Date:</label>
         <input type="date" id="birth-date">
         <label for="lucky-number">Lucky Number:</label>
         <input type="number" id="lucky-number">
         <button id="check">Check</button>
-        <p id="output"></p>
-    </main>
+    </div>
+
+    <p id="output"></p>
 
     <script src="main.js"></script>
 </body>
